--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <EditText
-        android:id="@+id/nameEt"
+        android:id="@+id/fnameEt"
         android:layout_width="213dp"
         android:layout_height="52dp"
         android:ems="10"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.164" />
 
     <EditText
-        android:id="@+id/surnameEt"
+        android:id="@+id/lnameEt"
         android:layout_width="224dp"
         android:layout_height="52dp"
         android:ems="10"
