--- a/app/src/main/res/layout/fragment_addgroup.xml
+++ b/app/src/main/res/layout/fragment_addgroup.xml
@@ -3,10 +3,20 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="107dp"
+        android:id="@+id/textView3"
+        android:layout_width="297dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Share"
-        android:textSize="30dp" />
-
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="328dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginBottom="334dp"
+        android:text="Group Name" />
 </RelativeLayout>
