--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,25 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+    <!--
+        these items appear on the navigation drawer as menu items that take the user to different destinations (fragments)
+        within the app.
+     -->
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_addgroup"
-            android:icon="@drawable/ic_addgroup"
-            android:title="AddGroup" />
+            android:id="@+id/homeFragment"
+            android:icon="@drawable/ic_menu_home"
+            android:title="@string/menu_home" />
+
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="Profile" />
+            android:id="@+id/profileFragment"
+            android:icon="@drawable/ic_menu_profile"
+            android:title="@string/menu_profile" />
+
+        <item
+            android:id="@+id/myGroupsFragment"
+            android:icon="@drawable/ic_menu_my_groups"
+            android:title="@string/menu_myGroups" />
+        <item
+            android:id="@+id/createGroupFragment"
+            android:icon="@drawable/ic_menu_create_group"
+            android:title="@string/menu_createGroup" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_share"
-                android:title="share" />
-
-        </menu>
-    </item>
 
 </menu>
