--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,53 +7,76 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.gradshub.main.ui.home.HomeFragment"
+        android:name="com.example.gradshub.main.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.gradshub.main.ui.profile.ProfileFragment"
+        android:name="com.example.gradshub.main.profile.ProfileFragment"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile"/>
 
     <fragment
-        android:id="@+id/myGroupsFragment"
-        android:name="com.example.gradshub.main.ui.mygroups.MyGroupsFragment"
+        android:id="@+id/myGroupsListFragment"
+        android:name="com.example.gradshub.main.mygroups.MyGroupsListFragment"
         android:label="@string/menu_myGroups"
-        tools:layout="@layout/fragment_item_list" >
+        tools:layout="@layout/fragment_my_groups_item_list" >
         <action
-            android:id="@+id/action_myGroupsFragment_to_exploreGroupsFragment"
-            app:destination="@id/exploreGroupsFragment"
-
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            android:id="@+id/action_myGroupsFragment_to_myGroupProfileFragment"
+            app:destination="@id/myGroupProfileFragment" />
     </fragment>
 
     <fragment
+        android:id="@+id/myGroupProfileFragment"
+        android:name="com.example.gradshub.main.mygroups.MyGroupsProfileFragment"
+        android:label="Group Profile"
+        tools:layout="@layout/fragment_my_groups_information" />
+
+    <fragment
         android:id="@+id/createGroupFragment"
-        android:name="com.example.gradshub.main.ui.creategroup.CreateGroupFragment"
+        android:name="com.example.gradshub.main.creategroup.CreateGroupFragment"
         android:label="@string/menu_createGroup"
         tools:layout="@layout/fragment_create_group" >
+    <action
+        android:id="@+id/action_createGroupFragment_to_myGroupsListFragment"
+        app:destination="@id/myGroupsListFragment"
+
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right"
+
+        app:popUpTo="@id/createGroupFragment"
+        app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/availableGroupsListFragment"
+        android:name="com.example.gradshub.main.availablegroups.AvailableGroupsListFragment"
+        android:label="Available Groups"
+        tools:layout="@layout/fragment_available_groups_item_list" >
         <action
-            android:id="@+id/action_createGroupFragment_to_myGroupsFragment"
-            app:destination="@id/myGroupsFragment"
+            android:id="@+id/action_availableGroupsListFragment_to_availableGroupProfileFragment"
+            app:destination="@id/availableGroupProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/availableGroupProfileFragment"
+        android:name="com.example.gradshub.main.availablegroups.AvailableGroupProfileFragment"
+        android:label="Group Profile"
+        tools:layout="@layout/fragment_available_group_profile" >
+        <action
+            android:id="@+id/action_availableGroupProfileFragment_to_myGroupsListFragment"
+            app:destination="@id/myGroupsListFragment"
 
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
 
-            app:popUpTo="@id/createGroupFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/availableGroupProfileFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
-
-    <fragment
-        android:id="@+id/exploreGroupsFragment"
-        android:name="com.example.gradshub.main.ui.exploregroups.ExploreGroupsFragment"
-        android:label="Research Groups"
-        tools:layout="@layout/fragment_explore_groups" />
 
 </navigation>
