--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.ui.home.HomeFragment">
-
-
-
+    tools:context=".main.home.HomeFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
