Classes and Xmls for showing posts in cardview on the home page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#808080</color>
+    <color name="mainBackground">#D7D7D7D7</color>
 
     <color name="colorRed">#FF0000</color>
 </resources>
