--- a/app/src/main/res/layout/fragment_my_groups_information.xml
+++ b/app/src/main/res/layout/fragment_my_groups_information.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".main.mygroups.MyGroupsProfileFragment">
 
     <TextView
@@ -12,6 +13,42 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:text="Group Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/postsList"
+        android:name="com.example.gradshub.MyGroupProfile"
+        android:layout_below="@+id/groupNameTV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".main.home.FeedListFragment"
+        tools:listitem="@layout/fragment_post_item" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_fab_post" />
+
+
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
