--- a/app/src/main/res/layout/fragment_my_groups_post_item.xml
+++ b/app/src/main/res/layout/fragment_my_groups_post_item.xml
@@ -73,25 +73,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/postDescriptionTV"
             android:src="@drawable/ic_thumb_up"
+            android:background="@color/colorWhite"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
             android:contentDescription="like post" />
 
         <TextView
             android:id="@+id/postLikesCountTV"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:layout_below="@+id/postDescriptionTV"
             android:layout_toRightOf="@+id/postLikeBtn"
             android:layout_toEndOf="@+id/postLikeBtn"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
-            android:text="100"
-            android:paddingTop="8dp"/>
+            android:text="100" />
 
 
         <ImageButton
@@ -102,25 +102,40 @@
             android:layout_toRightOf="@+id/postLikesCountTV"
             android:layout_toEndOf="@+id/postLikesCountTV"
             android:src="@drawable/ic_insert_comment"
-            android:layout_marginStart="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="4dp"
+            android:background="@color/colorWhite"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
             android:contentDescription="comment about post" />
 
         <TextView
             android:id="@+id/postCommentsCountTV"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:layout_below="@+id/postDescriptionTV"
             android:layout_toRightOf="@+id/postCommentBtn"
             android:layout_toEndOf="@+id/postCommentBtn"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="4dp"
+            android:text="50" />
+
+
+        <Button
+            android:id="@+id/commentBtn"
+            android:layout_width="135dp"
+            android:layout_height="45dp"
+            android:layout_below="@+id/postLikeBtn"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:text="50"
-            android:paddingTop="8dp"/>
+            android:drawableLeft="@drawable/ic_insert_comment"
+            android:drawableStart="@drawable/ic_insert_comment"
+            android:text="comments" />
+
 
     </RelativeLayout>
 
