--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -33,11 +33,14 @@
     <fragment
         android:id="@+id/myGroupProfileFragment"
         android:name="com.example.gradshub.main.mygroups.MyGroupsProfileFragment"
-        android:label="Group Profile"
+        android:label="Group Posts"
         tools:layout="@layout/fragment_my_groups_information" >
         <action
             android:id="@+id/action_myGroupProfileFragment_to_createPostFragment"
             app:destination="@id/createPostFragment" />
+        <action
+            android:id="@+id/action_myGroupProfileFragment_to_groupPostCommentsFragment"
+            app:destination="@id/groupPostCommentsFragment" />
     </fragment>
 
 
@@ -86,7 +89,7 @@
             app:popExitAnim="@anim/slide_out_right"
 
             app:popUpTo="@id/availableGroupProfileFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
     </fragment>
 
 
@@ -97,7 +100,22 @@
         tools:layout="@layout/fragment_create_post" >
         <action
             android:id="@+id/action_createPostFragment_to_myGroupProfileFragment"
-            app:destination="@id/myGroupProfileFragment" />
+            app:destination="@id/myGroupProfileFragment"
+
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+
+            app:popUpTo="@id/createPostFragment"
+            app:popUpToInclusive="true" />
     </fragment>
+
+
+    <fragment
+        android:id="@+id/groupPostCommentsFragment"
+        android:name="com.example.gradshub.main.postcomments.GroupPostCommentsFragment"
+        android:label="comments"
+        tools:layout="@layout/fragment_group_post_comments" />
 
 </navigation>
